--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,7 @@ find_package( Boost REQUIRED )
 include_directories( ${Boost_INCLUDE_DIRS} )
 
 add_executable( ViterbiTest test.cpp )
+add_test( NAME ViterbiTest COMMAND ${CMAKE_BINARY_DIR}/ViterbiTest )
+
 add_executable( ViterbiTest2 test2.cpp )
+add_test( NAME ViterbiTest2 COMMAND ${CMAKE_BINARY_DIR}/ViterbiTest2 )
